<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宾格版安全卫士</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="versionName">版本名称:</string>
    <string name="bartext">我生活在北京差不多有5年了,
            出门公交地铁,高峰早已习惯了,
   	  房子住在东五环,工作在西四环,
	 啊五环 你比四环多一环,
	诶不对呀,
	那是东五环,
	这是西四环,那能差一环么,
	那是一环又一环啊 </string>
    <string name="functionlist">功能列表</string>
    <string name="default_text">测试数据</string>
    <string name="set_psd">设置密码</string>
    <string name="input_set_psd">请输入密码</string>
    <string name="input_confirm_psd">确认密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="confirm_psd">确认密码</string>
    <string name="welcome">1,欢迎使用手机防盗</string>
    <string name="phoneguard">您的手机防盗卫士:</string>
    <string name="sim_change">sim卡变更报警</string>
    <string name="gps_trace">GPS追踪</string>
    <string name="data_destroy">远程数据销毁</string>
    <string name="remote_lockscreen">远程锁屏</string>
    <string name="sim_bind">2,手机卡绑定</string>
    <string name="sim_change_error">通过绑定SIM卡:\n下次重启手机如果发现SIM卡变化\n就会发送报警短信</string>
    <string name="safe_phone">3,安全号码</string>
    <string name="sim_change_to_safephone">SIM卡变更后\n报警短信会发送给安全号码</string>
    <string name="input_phone">请输入或者选择电话号码</string>
    
    <string name="select_contact">选择联系人</string>
    <string name="success">4,恭喜你,设置完成</string>
    <string name="notsave_protected">您没有开启防盗保护</string>
    <string name="set_update">自动更新设置</string> 
    <string name="set_update_off">自动更新已关闭</string>
    <string name="set_update_on">自动更新已开启</string>
    <string name="phone_guard">手机防盗</string>
    <string name="save_protected">防盗保护是否开启</string>
    <string name="re_set">重新进入设置向导</string>
    <string name="function">功能简介</string>
    <string name="gps_location">GPS追踪:#*location*#</string>
    <string name="play_alarm">播放报警音乐:#*alarm*#</string>
    <string name="clear_wipedata">远程删除数据:#*wipedata*#</string>
    <string name="lockscreen">远程锁屏:#*lockscreen*#</string>
    <string name="sample_device_admin_description">设备管理员的描述信息</string>
    <string name="sample_device_admin">设备管理员</string>
    <string name="atool">高级工具</string>
    <string name="location_search">归属地查询</string>
    <string name="sms_bak">短信备份</string>
    <string name="common_phone_search">常用号码查询</string>
    <string name="progm_lock">程序锁</string>
    <string name="sms_recover">短信恢复</string>
    <string name="input_search_phone">请输入查询的电话号码</string>
    <string name="search">查询</string>
    <string name="blacknumber_page">黑名单管理</string>
    <string name="add">添加</string>
    <string name="sms">短信</string>
    <string name="phone">电话</string>
    <string name="all">所有</string>
    <string name="refesh">刷新</string>
    <string name="drag">将提示框拖拽到任意位置</string>
    <string name="app_manager">软件管理</string>
    <string name="process_manager">进程管理</string>
    <string name="select_all">全选</string>
    <string name="reverse">反选</string>
    <string name="setting">设置</string>
    <string name="one_clear">一键清理</string>
    <string name="app_install_path">应用安装路径</string>
    <string name="uninstall">卸载</string>
    <string name="start">启动</string>
    <string name="share">分享</string>
    <string name="process_setting">进程设置</string>
    <string name="safe_num">安全号码</string>
    <string name="unlock">未加锁</string>
    <string name="lock">已加锁</string>
    <string name="anit_virus">手机杀毒</string>
    <string name="cache_clear">缓存清理</string>
    <string name="imme_clear">立即清理</string>
    <string name="modify">修改</string>
    <string name="unlock_app">未加锁应用</string>
    <string name="lock_app">已加锁应用</string>
    <string name="black_app">拦截应用的名称</string>
    

</resources>