<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleStyle"
        android:text="@string/location_search" />

    <EditText
        android:id="@+id/et_query_address"
        style="@style/MatchWrapStyle"
        android:inputType="phone"
        android:maxLength="12"
        android:hint="@string/input_search_phone" />

    <Button
        android:id="@+id/bt_setup3_select"
        style="@style/MatchWrapStyle"
        android:text="@string/select_contact" />

    <Button
        android:id="@+id/bt_query_search"
        style="@style/MatchWrapStyle"
        android:text="@string/search" />

    <TextView
        android:id="@+id/tv_query_show"
        style="@style/WrapStyle" />

</LinearLayout>