<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleStyle"
        android:text="@string/welcome" />

    <TextView
        style="@style/MatchWrapStyle"
        android:text="@string/phoneguard" />

    <TextView
        style="@style/MatchWrapStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:gravity="center_vertical"
        android:text="@string/sim_change" />

    <TextView
        style="@style/MatchWrapStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:gravity="center_vertical"
        android:text="@string/gps_trace" />

    <TextView
        style="@style/MatchWrapStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:gravity="center_vertical"
        android:text="@string/data_destroy" />

    <TextView
        style="@style/MatchWrapStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:gravity="center_vertical"
        android:text="@string/remote_lockscreen" />

    <LinearLayout
        style="@style/MatchWrapStyle"
        android:gravity="center_horizontal" >

        <ImageView
            style="@style/WrapStyle"
            android:background="@android:drawable/presence_online" />

        <ImageView
            style="@style/WrapStyle"
            android:background="@android:drawable/presence_invisible" />

        <ImageView
            style="@style/WrapStyle"
            android:background="@android:drawable/presence_invisible" />

        <ImageView
            style="@style/WrapStyle"
            android:background="@android:drawable/presence_invisible" />
    </LinearLayout>

    <RelativeLayout style="@style/MatchStyle" >

        <ImageView
            style="@style/WrapStyle"
            android:layout_centerInParent="true"
            android:background="@drawable/setup1" />

        <Button style="@style/NextBtnStyle" />
    </RelativeLayout>

</LinearLayout>