<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >
      <TextView 
        style="@style/TitleStyle"
        android:text="@string/confirm_psd"
        android:background="#f30"/>
    <!-- android:hint=""提示用户输入内容 -->
	<EditText 
	    android:id="@+id/et_confirm_psd"
	    android:hint="@string/input_confirm_psd"
	    android:inputType="textPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button 
	        android:id="@+id/bt_confirm_submit"
	        android:text="@string/confirm"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	    	android:layout_height="wrap_content"/>
	    <Button 
	        android:text="@string/cancel"
	        android:id="@+id/bt_confirm_cancel"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	    	android:layout_height="wrap_content"/>
	</LinearLayout>

</LinearLayout>
