<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/tv_enter_psd_name"
        style="@style/MatchWrapStyle"
        android:text="@string/black_app"
        />
	<ImageView 
	    android:id="@+id/iv_enter_psd_icon"
	    android:layout_width="45dp"
	    android:layout_height="45dp"
	    android:background="@drawable/ic_launcher"
	    />
	  <EditText 
         android:id="@+id/et_dialog_submit_psd"
         style="@style/MatchWrapStyle"
         android:hint="@string/input_set_psd"
         android:inputType="textPassword"
         />
	   
          <Button 
              android:id="@+id/bt_submit_psd"
              
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/confirm"
              />
       
</LinearLayout>
