<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_applock_unlock"
            style="@style/WrapStyle"
            android:background="@drawable/tab_left_pressed"
            android:text="@string/unlock" />

        <Button
            android:id="@+id/bt_applock_lock"
            style="@style/WrapStyle"
            android:background="@drawable/tab_right_default"
            android:text="@string/lock" />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/ll_applock_unlock"
        style="@style/MatchWrapStyle" 
        android:orientation="vertical"
        
        >
        <TextView 
            android:id="@+id/tv_applock_unlock"
            style="@style/WrapStyle"
            android:text="@string/unlock_app"
            />
        <ListView 
            android:id="@+id/lv_applock_unlock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></ListView>
    </LinearLayout>
     <LinearLayout 
         android:id="@+id/ll_applock_lock"
         android:visibility="gone"
         style="@style/MatchWrapStyle" 
        android:orientation="vertical"
        >
        <TextView 
            android:id="@+id/tv_applock_lock"
            style="@style/WrapStyle"
            android:text="@string/lock_app"
            />
        <ListView 
            android:id="@+id/lv_applock_lock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></ListView>
    </LinearLayout>

</LinearLayout>